--- a/bitrise/bitrise-ios.yml
+++ b/bitrise/bitrise-ios.yml
@@ -3,10 +3,10 @@ format_version: 1.1.0
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 app:
   envs:
-  - BITRISE_PROJECT_PATH: ios/snowflake.xcodeproj
+  - BITRISE_PROJECT_PATH: ios/testapp.xcodeproj
     opts:
       is_expand: false
-  - BITRISE_SCHEME: snowflake
+  - BITRISE_SCHEME: testapp
     opts:
       is_expand: false
 trigger_map:
